Changelog
=========

1.0.1 (Unreleased)
------------------

- Compute error_status and store it on request.
  Work around bug with Zope 2.13 publication events : 
  response.status is not set when IPubBeforeAbort is notified.
  [gotcha]

1.0 - 2011-05-13
----------------

- Release 1.0 Final.
  [esteele]

1.0b1 - 2010-04-21
------------------

- Initial release
